Deactivate double buffering for plugins plus fix up position and clip. bug 32327, bug 51787, bug 19931 bug 37126 r=sfraser,pchen a=buster